--- a/zh/index.html
+++ b/zh/index.html
@@ -48,6 +48,7 @@
 		-->
 		<li><a href="#" class="ready"><span class="famfamfam_sprite arrow_refresh"></span>重新排列</a></li>
 		<li><a href="#" class="save"><span class="famfamfam_sprite disk"></span>儲存圖片</a></li>
+		<li><a href="#" class="upload"><span class="famfamfam_sprite disk">上傳至 imgur</span></a></li>
 	</ul>
 </div>
 <div id="help" class="left_tool">
@@ -152,6 +153,7 @@
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
 <script type="text/javascript" src="../jquery.wordcloud.js"></script>
 <script type="text/javascript" src="../jquery.getcontent.js"></script>
+<script type="text/javascript" src="../jquery.imgur.js"></script>
 <script type="text/javascript" src="../jquery-ui-1.8.12.custom.min.js"></script>
 <script type="text/javascript" src="../worker.js"></script>
 <script type="text/javascript" src="../wordfreq.js"></script>
